--- a/Basicos/ex02.html
+++ b/Basicos/ex02.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<H2> 01- Escreva um programa que mostre na tela a mensagem "Olá, Mundo!"</H2>
+<H2> 02- Faça um programa que leia o nome de uma pessoa e mostre uma mensagem de boas-vindas para ela: </H2>
     
 
 
@@ -19,6 +19,9 @@
 
 
 
-<script src="ex01.js"></script>
+<script>
+    let name = prompt("Digite Seu Nome: ");
+document.write (`Prazer em conhecer, ${name}!`)
+</script>
 </body>
 </html>
