--- a/Basicos/ex04.html
+++ b/Basicos/ex04.html
@@ -18,7 +18,18 @@
 
 
 
+<script>
+    let N1 = parseInt(prompt("Digite um Valor: "))
+let N2 = parseInt(prompt("Digite outro Valor: "))
 
-<script src="ex04.js"></script>
+let Soma = (N1 + N2)
+
+if (isNaN(N1,N2)) {
+    alert("erro, Insira um número por favor!")
+}
+
+alert(`A soma dos Valores inseridos é: ${Soma}`)
+
+</script>
 </body>
 </html>
