--- a/Basicos/ex03.html
+++ b/Basicos/ex03.html
@@ -19,6 +19,17 @@
 
 
 
-<script src="ex03.js"></script>
+<script>
+    let Funcionario = prompt("Digite o nome do Funcionário")
+let Salario = parseInt(prompt("Digite seu Sálario: "))
+let Data = "15/05/24";
+
+document.write(`O Funcionário ${Funcionario}  Recebe R$${Salario} em ${Data}`);
+
+if(isNaN(Salario)) {
+ 
+    alert("ERRO! Digite um número, por favor.")
+}
+</script>
 </body>
 </html>
